# provenance

./: .dockerignore  .gitignore  BUILD-AUTONOMY.md  CONSTITUTION.md  Dockerfile  README.md  RUNBOOK.md  conftest.py  plan.md  pyproject.toml  requirements-optional.txt  requirements.txt
app/: __init__.py  agent.py  archive.py  assurance.py  charts.py  cohort.py  composer.py  context.py  demo.py  funnel.py  google_login.py  graph.py  help.py  help_corpus.json  inspector.py  main.py  observatory.py  optimizer.py  personalize.py  persuasion.py  policies.py  server.py  showcase.py  site.py  sources.py  workspace.py
architecture/: README.md  provenance-architecture.html
corpus/: customer-case-studies.md  pricing-packaging.md  product-one-pager.md  security-compliance.md
decks/: AGENCY-PITCH-TECHNICAL-APPENDIX.html  AGENCY-PITCH.html  BEFORE-AFTER-VALUE.html  BEFORE-AFTER-VALUE.md  BEYOND-MARKETING.html  BUSINESS-VISION.html  CAPSTONE-IDEA-MENU.html  COHORT-DEMO-PROJECT-PLAN.md  DATA-BY-SCENARIO.html  FULL-FUNNEL-VIEW.html  GAUNTLET-PILOT-DECK.html  GAUNTLET-SPRINT-PLAN.html  GAUNTLET-SPRINT-PRD.html  MECHANISM-TO-VALUE.html  MECHANISM-TO-VALUE.md  MEETING-NOTES-SEGMENTATION-AND-DEMO.md  ONE-WEEK-GAUNTLET-PLAN.md  OPTIMIZER-ASSURANCE-LAB.html  OVERSIGHT-LAYER-PROPOSAL.html  PROJECT-PLANNING-DOCUMENT.html  PROJECT-PLANNING-DOCUMENT.md  PROVABLE-FUNNEL-FOR-MARKETERS.html  PROVENANCE-CAPSTONE.html  PROVENANCE-CAPSTONE.md  PROVENANCE-EXPLAINER-1PAGE.html  PROVENANCE-EXPLAINER-1PAGE.md  PROVENANCE-RECRUIT-1PAGE.html  PROVENANCE-RECRUIT-1PAGE.md  PROVENANCE-SOLUTION.html  (+16 more)
(+191 files in other folders)
